--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,20 @@
 *.exe
 *.out
 *.app
+MiddleROV2Surface/Release/MiddleROV2Surface.with_bootloader.hex
+MiddleROV2Surface/Release/MiddleROV2Surface.ino.with_bootloader.hex
+MiddleROV2Surface/Release/MiddleROV2Surface.ino.hex
+MiddleROV2Surface/Release/MiddleROV2Surface.ino.elf
+MiddleROV2Surface/Release/MiddleROV2Surface.hex
+MiddleROV2Surface/Release/MiddleROV2Surface.elf
+MiddleROV2Surface/Release/board.buildinfo
+MiddleROV2Surface/MiddleROV2Surface.vcxproj.user
+MiddleROV2Surface/MiddleROV2Surface.vcxproj.filters
+MiddleROV2Surface/Debug/MiddleROV2Surface.with_bootloader.hex
+MiddleROV2Surface/Debug/MiddleROV2Surface.ino.with_bootloader.hex
+MiddleROV2Surface/Debug/MiddleROV2Surface.ino.hex
+MiddleROV2Surface/Debug/MiddleROV2Surface.ino.elf
+MiddleROV2Surface/Debug/MiddleROV2Surface.hex
+MiddleROV2Surface/Debug/MiddleROV2Surface.elf
+MiddleROV2Surface/Debug/board.buildinfo
+.vs/MiddleROV2Surface/v15/.suo
